--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-toastify": "^7.0.4",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "shortid": "^2.2.16",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
